# calct

./: .gitignore  README.md  lint.sh  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
calct/: __init__.py  __main__.py  _common.py  _divmod.py  _duration_parser.py  common.py  duration.py  main.py  parser.py
tests/: test_divmod.py  test_duration_cls.py  test_duration_cmp.py  test_duration_convert.py  test_duration_format.py  test_duration_ops.py  test_duration_parse.py  test_parser_evaluate.py  test_parser_lexing.py  test_parser_ops.py  test_parser_parsing.py
