[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "calct"
authors = [
    {name = "Philippe Warren", email = "philippewarren31@gmail.com"},
]
description = "Easily do calculations on hours and minutes using the command line"
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Natural Language :: French",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "typing-extensions>=4.6.3,"
]

[project.optional-dependencies]
dev = [
    "ipython==8.14.0",
    "black==23.3.0",
    "isort==5.12.0",
    "mypy==1.4.1",
    "pylint==2.17.4",
    "flake8==6.0.0",
    "Flake8-pyproject==1.2.3",
    "pyright==1.1.316",
]
test = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
]

[project.urls]
homepage = "https://github.com/philippewarren/calct"
repository = "https://github.com/philippewarren/calct"
changelog = "https://github.com/philippewarren/calct/releases"

[project.scripts]
calct = "calct.main:main"

[tool.setuptools]
packages = ["calct"]
dynamic = {version = {attr = "calct.__version__"}}

[tool.pytest.ini_options]
required_plugins = "pytest-cov>=3.0.0"
addopts = "--cov=calct --cov-branch --cov-context=test --cov-report=html:./cov_calct_html --cov-report=xml:./cov_calct.xml"

[tool.setuptools_scm]
write_to_template = """
# file generated by setuptools_scm
# don't change, don't track in version control
__version__ = "{version}"
__version_tuple__ = {version_tuple}
"""
write_to = "calct/__version__.py"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.pylint]
disable = [
    "logging-fstring-interpolation",
    "missing-module-docstring",
    "missing-function-docstring",
    "fixme",
]
enable = ["useless-suppression"]
max-line-length = 120

[tool.flake8]
max_line_length = 120

[tool.coverage.html]
show_contexts = true

[tool.coverage.run]
omit = [
    "calct/__main__.py",
    "calct/__version__.py",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise AssertionError",
    ".*assert_never\\(.*\\)",
    "if TYPE_CHECKING:",
]
